vlib/v/checker/tests/in_mismatch_type.out
vlib/v/checker/tests/in_mismatch_type.vv:10:7: error: the data type on the left of `in` (`any_int`) does not match the array item type (`string`) 
    8 |     }
    9 |     s := 'abcd'
   10 |     if 1 in a_s {
      |          ~~
   11 |         println('ok')
   12 |     }
vlib/v/checker/tests/in_mismatch_type.vv:13:7: error: the data type on the left of `in` (`any_int`) does not match the map key type `string` 
   11 |         println('ok')
   12 |     }
   13 |     if 2 in m {
      |          ~~
   14 |         println('yeah')
   15 |     }
vlib/v/checker/tests/in_mismatch_type.vv:16:7: error: the data type on the left of `in` must be a string (is `any_int`) 
   14 |         println('yeah')
   15 |     }
   16 |     if 3 in s {
      |          ~~
   17 |         println('dope')
   18 |     }
vlib/v/checker/tests/in_mismatch_type.vv:19:9: error: the data type on the left of `in` must be a string (is `rune`)
   17 |         println('dope')
   18 |     }
   19 |     if `a` in s {
      |            ~~
   20 |         println("oh no :'(")
   21 |     }
vlib/v/checker/tests/in_mismatch_type.vv:22:7: error: `in` can only be used with an array/map/string 
   20 |         println("oh no :'(")
   21 |     }
   22 |     if 1 in 12 {
      |          ~~
   23 |         println('right')
   24 |     }
vlib/v/checker/tests/in_mismatch_type.vv:25:12: error: the data type on the left of `in` (`Int`) does not match the map key type `string` 
   23 |         println('right')
   24 |     }
   25 |     if Int(2) in m {
      |               ~~
   26 |         println('yeah')
   27 |     }
vlib/v/checker/tests/in_mismatch_type.vv:28:9: error: the data type on the left of `in` (`string`) does not match the array item type (`int`) 
   26 |         println('yeah')
   27 |     }
   28 |     if '3' in a_i {
      |            ~~
   29 |         println('sure')
   30 |     }
vlib/v/checker/tests/in_mismatch_type.vv:31:9: error: the data type on the left of `in` (`string`) does not match the array item type (`int`) 
   29 |         println('sure')
   30 |     }
   31 |     if '2' in a_i {
      |            ~~
   32 |         println('all right')
   33 |     }
vlib/v/checker/tests/in_mismatch_type.vv:34:7: error: the data type on the left of `!in` (`any_int`) does not match the array item type (`string`) 
   32 |         println('all right')
   33 |     }
   34 |     if 1 !in a_s {
      |          ~~~
   35 |         println('ok')
   36 |     }
vlib/v/checker/tests/in_mismatch_type.vv:37:9: error: the data type on the left of `!in` (`string`) does not match the array item type (`int`) 
   35 |         println('ok')
   36 |     }
   37 |     if '1' !in a_i {
      |            ~~~
   38 |         println('good')
   39 |     }
vlib/v/checker/tests/in_mismatch_type.vv:41:7: error: the data type on the left of `!in` (`any_int`) does not match the map key type `string` 
   39 |     }
   40 | 
   41 |     if 5 !in m {
      |          ~~~
   42 |         println('yay')
   43 |     }
