vlib/v/checker/tests/in_mismatch_type.vv
type Int = int

fn main() {
	a_i := [1, 2, 3]
	a_s := ['1', '2', '3']
	m := {
		'test': 1
	}
	s := 'abcd'
	if 1 in a_s {
		println('ok')
	}
	if 2 in m {
		println('yeah')
	}
	if 3 in s {
		println('dope')
	}
	if `a` in s {
		println("oh no :'(")
	}
	if 1 in 12 {
		println('right')
	}
	if Int(2) in m {
		println('yeah')
	}
	if '3' in a_i {
		println('sure')
	}
	if '2' in a_i {
		println('all right')
	}
	if 1 !in a_s {
		println('ok')
	}
	if '1' !in a_i {
		println('good')
	}

	if 5 !in m {
		println('yay')
	}
}
